fixed scrollbars with chromium

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@ html, body{
   padding:0;
 }
 
+.nytimes{
+  height:100vh;
+}
+
 
 #dailypaper{
   margin:0;
